--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="tab_22">
        <attribute name="title">
@@ -337,7 +337,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="tabWidget_2">
           <property name="currentIndex">
-           <number>11</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tab_4">
            <attribute name="title">
@@ -706,6 +706,9 @@
                <property name="maximum">
                 <number>10</number>
                </property>
+               <property name="pageStep">
+                <number>1</number>
+               </property>
                <property name="value">
                 <number>5</number>
                </property>
@@ -764,6 +767,9 @@
                </property>
                <property name="maximum">
                 <number>25</number>
+               </property>
+               <property name="pageStep">
+                <number>1</number>
                </property>
                <property name="value">
                 <number>10</number>
@@ -859,6 +865,9 @@
                   <property name="maximum">
                    <number>100</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>50</number>
                   </property>
@@ -906,6 +915,9 @@
                   </property>
                   <property name="maximum">
                    <number>100</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>50</number>
@@ -995,6 +1007,9 @@
                <property name="maximum">
                 <number>100</number>
                </property>
+               <property name="pageStep">
+                <number>1</number>
+               </property>
                <property name="value">
                 <number>0</number>
                </property>
@@ -1075,6 +1090,9 @@
                <property name="maximum">
                 <number>100</number>
                </property>
+               <property name="pageStep">
+                <number>1</number>
+               </property>
                <property name="value">
                 <number>0</number>
                </property>
@@ -1134,6 +1152,9 @@
                <property name="maximum">
                 <number>40</number>
                </property>
+               <property name="pageStep">
+                <number>1</number>
+               </property>
                <property name="value">
                 <number>0</number>
                </property>
@@ -1192,6 +1213,9 @@
                </property>
                <property name="maximum">
                 <number>40</number>
+               </property>
+               <property name="pageStep">
+                <number>1</number>
                </property>
                <property name="value">
                 <number>0</number>
@@ -1286,6 +1310,9 @@
                   <property name="maximum">
                    <number>80</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>40</number>
                   </property>
@@ -1333,6 +1360,9 @@
                   </property>
                   <property name="maximum">
                    <number>120</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>60</number>
@@ -1425,6 +1455,9 @@
                   <property name="maximum">
                    <number>80</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>40</number>
                   </property>
@@ -1472,6 +1505,9 @@
                   </property>
                   <property name="maximum">
                    <number>120</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>60</number>
@@ -1564,6 +1600,9 @@
                   <property name="maximum">
                    <number>80</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>40</number>
                   </property>
@@ -1611,6 +1650,9 @@
                   </property>
                   <property name="maximum">
                    <number>120</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>60</number>
@@ -1703,6 +1745,9 @@
                   <property name="maximum">
                    <number>80</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>40</number>
                   </property>
@@ -1750,6 +1795,9 @@
                   </property>
                   <property name="maximum">
                    <number>120</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>60</number>
@@ -1835,6 +1883,9 @@
                   <property name="maximum">
                    <number>10</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>0</number>
                   </property>
@@ -1882,6 +1933,9 @@
                   </property>
                   <property name="maximum">
                    <number>10</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>0</number>
@@ -1931,6 +1985,9 @@
                   <property name="maximum">
                    <number>40</number>
                   </property>
+                  <property name="pageStep">
+                   <number>1</number>
+                  </property>
                   <property name="value">
                    <number>0</number>
                   </property>
@@ -1978,6 +2035,9 @@
                   </property>
                   <property name="maximum">
                    <number>40</number>
+                  </property>
+                  <property name="pageStep">
+                   <number>1</number>
                   </property>
                   <property name="value">
                    <number>0</number>
@@ -2538,6 +2598,9 @@
               <property name="maximum">
                <number>10</number>
               </property>
+              <property name="pageStep">
+               <number>1</number>
+              </property>
               <property name="value">
                <number>5</number>
               </property>
@@ -2586,6 +2649,9 @@
               <property name="maximum">
                <number>10</number>
               </property>
+              <property name="pageStep">
+               <number>1</number>
+              </property>
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -2627,6 +2693,9 @@
               </property>
               <property name="maximum">
                <number>10</number>
+              </property>
+              <property name="pageStep">
+               <number>1</number>
               </property>
               <property name="value">
                <number>5</number>
@@ -2675,6 +2744,9 @@
               </property>
               <property name="maximum">
                <number>10</number>
+              </property>
+              <property name="pageStep">
+               <number>1</number>
               </property>
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -3001,7 +3073,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="tabWidget_3">
           <property name="currentIndex">
-           <number>1</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="tab_19">
            <attribute name="title">
