--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>6</number>
       </property>
       <widget class="QWidget" name="tab_22">
        <attribute name="title">
@@ -10257,7 +10257,7 @@ White:</string>
       </widget>
       <widget class="QWidget" name="tab_18">
        <attribute name="title">
-        <string>Страница</string>
+        <string>Remote Control Simulation</string>
        </attribute>
       </widget>
      </widget>
